Fix figures w/ mask possibly jumping after hero transition
Do it w/ scroll-target

--- a/components/Figure/_Figure.scss
+++ b/components/Figure/_Figure.scss
@@ -16,11 +16,11 @@
   &.-mask {
     overflow: hidden;
 
-    @include mq($until: mobile) {
-      .Figure-figure  {
-        background: transparent;
-      }
-    }
+    // @include mq($until: mobile) {
+    //   .Figure-figure  {
+    //     background: transparent;
+    //   }
+    // }
   }
 }
 
